support for no request body and another path added
